--- a/photoproject/templates/photo/showserchfileinfo.html
+++ b/photoproject/templates/photo/showserchfileinfo.html
@@ -406,6 +406,26 @@
                                         alert("“{{ fn }}”的共享路径已复制，可粘贴至资源管理器中打开。");
                                     }                
                                 </script>                                                                               
+                            {% endif %}
+                            {% if filetype == "上新海报" %}                                                                                                  
+                                <pre id="{{ fn }}" hidden >{{ filename }}</pre>
+                                <textarea id="input"></textarea>
+                                <button onclick="copyText{{ functionindex }}()" id="copyBtn">
+                                    <img class="lazy img-responsive" data-original="/shangxinhaibao{{ fileurl }}" width="216" >
+                                    <br></br>
+                                    <font size="1.2">{{ filetype }}{{ fileindex }}：{{ fn }}</font>
+                                </button>
+                                <input type="checkbox" name="downurl"  value="/shangxinhaibao{{ fileurl }},{{ fn }}" />                               
+                                <script type="text/javascript">            
+                                    function copyText{{ functionindex }}() {
+                                        var text = document.getElementById("{{ fn }}").innerText;
+                                        var input = document.getElementById("input");
+                                        input.value = text; // 修改文本框的内容
+                                        input.select(); // 选中文本
+                                        document.execCommand("copy"); // 执行浏览器复制命令
+                                        alert("“{{ fn }}”的共享路径已复制，可粘贴至资源管理器中打开。");
+                                    }                
+                                </script>                                                                               
                             {% endif %}                                                
                         </td>                                                             
                     </tr>
