--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -84,7 +84,8 @@
                 font-weight:normal; 
                 }
                 #word{   
-                color:#e745da; 
+                color:rgb(255, 67, 179); 
+                font-weight:bold; 
                 }
                 #word2{   
                 color:#4570e7; 
@@ -111,8 +112,8 @@
                     margin-bottom: 12px;
                     /* border-bottom: 6px solid  ;  style="padding-left: 10px;"*/
                 }
-                #imagebutton{
-                    margin: 10px 10px 10px 10px;
+                #image{
+                    margin: 30px 30px 30px 30px;
                     width: 256px;
                     height: 420px;
                     /* color:#4570e7; */
@@ -156,9 +157,9 @@
                             {% if filetype == "上新海报" %}                                                                                                  
                                 <pre id="{{ fn }}" hidden >{{ filename }}</pre>
                                 <textarea id="input"></textarea>
-                                <img class="lazy img-responsive" data-original="/shangxinhaibao{{ fileurl }}" width="360" >
+                                <img class="lazy img-responsive" data-original="/shangxinhaibao{{ fileurl }}" id="image" >
                                 <br></br>
-                                <font size="1.2">{{ fn }}</font>                            
+                                <font size="1.2" id="word">{{ fn }}</font>                            
                                 <!-- <script type="text/javascript">            
                                     function copyText{{ functionindex }}() {
                                         var text = document.getElementById("{{ fn }}").innerText;
