--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -82,11 +82,7 @@
                 #titleword{   
                 color:#e745da; 
                 font-weight:normal; 
-                }
-                #word{   
-                color:rgb(255, 67, 179); 
-                font-weight:bold; 
-                }
+                }           
                 #word2{   
                 color:#4570e7; 
                 }
@@ -113,10 +109,14 @@
                     /* border-bottom: 6px solid  ;  style="padding-left: 10px;"*/
                 }
                 #image{
-                    margin: 30px 30px 30px 30px;
-                    width: 256px;
-                    height: 420px;
+                    margin: 30px 30px 30px 10px;
+                    width: 360px;
                     /* color:#4570e7; */
+                }
+                #word{   
+                color:rgb(255, 67, 179); 
+                font-weight:bold; 
+                margin-left: 60px;
                 }
                 .wrapper {position: relative;}
                  #input {position: absolute;top: 0;left: 0;opacity: 0;z-index: -10;}
