--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -128,7 +128,7 @@
         <div style="position: fixed; top: 0px; " id="searchback">                                                                                      
             <span id="searchBarWrap2">
                 <a href="/">
-                    <img controls src="/static/photo/img/zi2.png" width="181" height="30">
+                    <img controls src="/static/photo/img/zi2.png" width="181" height="30" margin-left="145";>
                 </a>
                 <!-- &nbsp; 
                 <input id="searchBar" type="text" name="search" value="{{ keyword }}"   placeholder="品牌/波次/日期/品类/用途    搜图引擎" style="width: 700px; text-align: center;">
