--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -113,6 +113,12 @@
                     width: 360px;
                     /* color:#4570e7; */
                 }
+                #imagetitle{
+                    margin-left: 145px;
+                    width: 181px;
+                    height: 30px;
+                    /* color:#4570e7; */
+                }
                 #word{   
                 color:rgb(255, 67, 179); 
                 font-weight:bold; 
@@ -128,7 +134,7 @@
         <div style="position: fixed; top: 0px; " id="searchback">                                                                                      
             <span id="searchBarWrap2">
                 <a href="/">
-                    <img controls src="/static/photo/img/zi2.png" width="181" height="30" margin-left="145";>
+                    <img controls src="/static/photo/img/zi2.png" id="imagetitle">
                 </a>
                 <!-- &nbsp; 
                 <input id="searchBar" type="text" name="search" value="{{ keyword }}"   placeholder="品牌/波次/日期/品类/用途    搜图引擎" style="width: 700px; text-align: center;">
