--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -109,12 +109,12 @@
                     /* border-bottom: 6px solid  ;  style="padding-left: 10px;"*/
                 }
                 #image{
-                    margin: 60px 20px 10px 35px;
+                    margin: 60px 20px 10px 20px;
                     width: 360px;
                     /* color:#4570e7; */
                 }
                 #imagetitle{
-                    margin-left: 120px;
+                    /* margin-left: 120px; */
                     width: 181px;
                     height: 30px;
                     /* color:#4570e7; */
