--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -111,18 +111,21 @@
                 #image{
                     margin: 60px 20px 10px 10px;
                     width: 360px;
+                    text-align: center;
                     /* color:#4570e7; */
                 }
                 #imagetitle{
                     /* margin-left: 120px; */
                     width: 181px;
                     height: 30px;
+                    text-align: center;
                     /* color:#4570e7; */
                 }
                 #word{   
                 color:rgb(255, 67, 179); 
                 font-weight:bold; 
-                margin-left: 110px;
+                /* margin-left: 110px; */
+                text-align: center;
                 }
                 .wrapper {position: relative;}
                  #input {position: absolute;top: 0;left: 0;opacity: 0;z-index: -10;}
