--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -109,8 +109,8 @@
                     /* border-bottom: 6px solid  ;  style="padding-left: 10px;"*/
                 }
                 #image{
-                    margin: 60px 20px 10px 10px;
-                    width: 360px;
+                    margin: 60px 20px 10px 25px;
+                    width: 370px;
                     text-align: center;
                     /* color:#4570e7; */
                 }
@@ -118,13 +118,13 @@
                     /* margin-left: 120px; */
                     width: 181px;
                     height: 30px;
-                    text-align: center;
+                    /* text-align: center; */
                     /* color:#4570e7; */
                 }
                 #word{   
                 color:rgb(255, 67, 179); 
                 font-weight:bold; 
-                /* margin-left: 110px; */
+                margin-left: 115px;
                 text-align: center;
                 }
                 .wrapper {position: relative;}
@@ -137,7 +137,7 @@
         <div style="position: fixed; top: 0px; " id="searchback">                                                                                      
             <span id="searchBarWrap2">
                 <a href="/">
-                    <img controls style="text-align: center;" src="/static/photo/img/zi2.png" id="imagetitle">
+                    <img controls src="/static/photo/img/zi2.png" id="imagetitle">
                 </a>
                 <!-- &nbsp; 
                 <input id="searchBar" type="text" name="search" value="{{ keyword }}"   placeholder="品牌/波次/日期/品类/用途    搜图引擎" style="width: 700px; text-align: center;">
