--- a/photoproject/templates/photo/showsearchhaibao.html
+++ b/photoproject/templates/photo/showsearchhaibao.html
@@ -109,9 +109,9 @@
                     /* border-bottom: 6px solid  ;  style="padding-left: 10px;"*/
                 }
                 #image{
-                    margin: 60px 20px 10px 25px;
-                    width: 370px;
-                    text-align: center;
+                    margin: 60px 20px 10px 20px;
+                    width: 365px;
+                    /* text-align: center; */
                     /* color:#4570e7; */
                 }
                 #imagetitle{
@@ -124,7 +124,7 @@
                 #word{   
                 color:rgb(255, 67, 179); 
                 font-weight:bold; 
-                margin-left: 115px;
+                margin-left: 130px;
                 text-align: center;
                 }
                 .wrapper {position: relative;}
